fix: restore overflow Y auto

--- a/apps/bilan-carbone/src/components/modals/Modal.module.css
+++ b/apps/bilan-carbone/src/components/modals/Modal.module.css
@@ -26,7 +26,8 @@
 }
 
 .content {
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .actions {
